--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main>
     <p>My SF City Trip</p>
-    <p>Image 1</p>
+    <img src="images/sf.jpg" alt="Image of the San Francisco streets">
     <p>The California Landscape</p>
     <p>Image 2</p>
     <p>Do people like my page</p>
