--- a/index.html
+++ b/index.html
@@ -4,31 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our First Webpage</title>
+  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <header><h1>Mike's World</h1></header>
+  <!--<p>Comments</p>-->
+  <header class="fixed-bar"><h1 class="page-title">Mike's World</h1></header>
   
   <nav>
-    <ul>
+    <ul class="navigation">
       <li>Home</li>
       <li><a href="contact/index.html">Contact</a></li>
-      
     </ul>
   </nav>
 
   <main>
-    <p>My SF City Trip</p>
-    <img src="images/sf.jpg" alt="Image of the San Francisco streets">
-    <p>The California Landscape</p>
-    <p>Image 2</p>
-    <p>Do people like my page</p>
+
+    <div class="trip-text">
+      <p>My SF City Trip</p>
+      <p>The California Landscape</p>
+    </div>
+
+    <div class="trip-images">
+      <img src="images/sf.png" alt="Image of the San Francisco streets">
+      <img src="images/california.png" alt="Image of the California streets">
+    </div>
+
+    <p class="feedback">Do people like my page</p>
   </main>
 
   <footer>
-    <p>Image Max - Awesome page, great work, keep it up!</p>
-    <p>Image Manu - Looks really nice, beautiful pictures!</p>
+    <div class="review-clients">
+      <img src="images/image-max.png" alt="Imagge of Max">
+      <p>Max - Awesome page, great work, keep it up!</p>
+    </div>
+    <div class="review-clients">
+      <img src="images/image-manu.png" alt="Image of Manu">
+      <p>Manu - Looks really nice, beautiful pictures!</p>
+    </div>
   </footer>
-
 </body>
 </html>
