--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our First Webpage</title>
+  <link rel="shortcut icon" href="../images/favicon.png">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
