--- a/contact/index.html
+++ b/contact/index.html
@@ -3,22 +3,22 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <title>Our First Webpage</title>
   <link rel="shortcut icon" href="../images/favicon.png">
   <link rel="stylesheet" href="../styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <h1>Mike's World</h1>
+  <header class="fixed-bar">
+    <h1 class="page-title">Mike's World</h1>
   </header>
-
   <nav>
-    <ul>
+    <ul class="navigation">
       <li><a href="../index.html">Home</a></li>
-      <li>Contact</li>
+      <li>Contact</a></li>
     </ul>
   </nav>
-</body>
+</body> 
 </html> 
