--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <title>Our First Webpage</title>
   <link rel="shortcut icon" href="images/favicon.png">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <!--<p>Comments</p>-->
-  <header class="fixed-bar"><h1 class="page-title">Mike's World</h1></header>
-  
+  <header class="fixed-bar">
+    <h1 class="page-title">Mike's World</h1>
+  </header>
+
   <nav>
     <ul class="navigation">
       <li>Home</li>
@@ -20,7 +22,6 @@
   </nav>
 
   <main>
-
     <div class="trip-text">
       <p>My SF City Trip</p>
       <p>The California Landscape</p>
@@ -31,14 +32,15 @@
       <img src="images/california.png" alt="Image of the California streets">
     </div>
 
-    <p class="feedback">Do people like my page</p>
+    <p class="feedback">Do people like my page?</p>
   </main>
 
   <footer>
     <div class="review-clients">
-      <img src="images/image-max.png" alt="Imagge of Max">
+      <img src="images/image-max.png" alt="Image of Max">
       <p>Max - Awesome page, great work, keep it up!</p>
     </div>
+    
     <div class="review-clients">
       <img src="images/image-manu.png" alt="Image of Manu">
       <p>Manu - Looks really nice, beautiful pictures!</p>
